test/spec_vectors/br_if/fail/module_29.wat
(module (func $large-label (br_if 268435457 (i32.const 1))))